--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,16 @@
-@import './variables.scss';
-@import './mixin.scss';
-@import './transition.scss';
-@import './element-ui.scss';
-@import './sidebar.scss';
+@import "./variables.scss";
+@import "./mixin.scss";
+@import "./transition.scss";
+@import "./element-ui.scss";
+@import "./sidebar.scss";
 
 body {
   height: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
+    Microsoft YaHei, Arial, sans-serif;
 }
 
 label {
@@ -61,5 +62,16 @@ div:focus {
 
 // main-container global css
 .app-container {
-  padding: 20px;
+  height: 100%;
+  .app {
+    margin: 20px;
+  }
+}
+
+.el-scrollbar__wrap {
+  overflow-x: hidden;
+}
+
+.el-cascader-menu__list {
+  padding: 6px 0 23px;
 }
